# PlugIt

./: CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
example/: CMakeLists.txt
example/include/: example_plugin.hpp  plugin_bar.hpp  plugin_foo.hpp
example/src/: plugin_bar.cpp  plugin_foo.cpp
include/: shared_library.hpp
src/: shared_library.cpp
test/: test_shared_library.cpp
